--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   google_sign_in: ^4.5.6
   fluttertoast: ^3.1.0
   cloud_firestore: ^0.14.3
+  flutter_local_notifications: ^3.0.1+3
+  flutter_native_timezone: ^1.0.4
 
 dev_dependencies:
   flutter_test:
