--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^0.14.3
   flutter_local_notifications: ^3.0.1+3
   flutter_native_timezone: ^1.0.4
+  google_fonts: ^1.1.1
 
 dev_dependencies:
   flutter_test:
